--- a/style.css
+++ b/style.css
@@ -1,198 +1,57 @@
 html, body {
-  /* background-color: #f5f5f5; */
-  font-family: arial;
-}
-html {
-  background-image: url('https://multifandom.ru/pic/201602/1920x1080/multifandom.ru-1673.jpg');
-  background-repeat: no-repeat;
-  background-size: 100%;
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  font-family: "Fira Mono", sans-serif;
 }
 * {
-  margin: 0px;
-  padding: 0px;
+  box-sizing: border-box;
 }
-.fixed-container {
-  margin: 0 auto;
-  width: 960px;
+body {
+  background-color: #223377;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-#central-container {
-  height: 589px;
-  margin-top: 61px;
+form {
+  width: 500px;
+  height: 490px;
+  background-color: #222;
+  display: flex;
+  justify-content: space-evenly;
+  flex-direction: column;
+  align-items: center;
 }
-h2 {
-  font-size: 21px;
-  font-weight: normal;
-}
-
-
-
-
-#left-column {
-  float: left;
-  width: 470px;
-  height: 589px;
-  margin-right: 10px;
-}
-/*#left-h2 {
-  float: left;
-  margin-bottom: 29px;
-  margin-right: 352px;
-}*/
-
-.left-white-box {
-  width: 470px;
-  min-height: 136px;
-  background-image: url('https://vokrug-tv.ru/pic/person/5/e/e/a/5eea7338f84ade12a796097bf0725660.jpeg');
-  background-repeat: no-repeat;
-  background-size: 100% 100%;
-  float: left;
-  margin-bottom: 20px;
-
-}
-.left-white-content {
-  padding: 16px 16px;
-}
-.left-top-box {
-  height: 50px;
-  border-bottom: 1px solid #f7f7f7;
-}
-h3.left-h3 {
-  font-size: 16px;
-  color: #000000;
-  display: inline-block;
-  float: left;
-  margin-right: 21px;
-}
-.cross {
-  background-image: url(img/cross.png);
-  background-repeat: no-repeat;
-  width: 11px;
-  height: 11px;
-  float: left;
-  margin-top: 4px;
-  border: 0;
-  background-color: transparent;
-  cursor: pointer;
-}
-
-.arrow {
-  /* background-image: url(img/arrow.png); */
-  background-repeat: no-repeat;
-  background-color: red;
-  width: 8px;
-  height: 7px;
-  float: right;
-  margin-top: 6px;
-  margin-right: 6px;
-  border: 0;
-  cursor: pointer;
-}
-.rotate-arrow {
-  transform: rotate(90deg);
-}
-
-.left-bottom-box {
-  height: 85px;
-  /* background-color: red; */
-
-}
-.left-bottom-box .left-white-content {
-  padding: 7px 21px;
-  float: left;
-}
-.left-disc {
-  font-size: 14px;
-  color: #8993ad;
-}
-
-
-/*
-#left-h2 {
-margin-bottom: 74px;
-}
-span {
-font-size: 16px;
-color: #8993ad;
-}
-*/
-
-
-
-
-#right-column {
-  float: right;
-  width: 470px;
-  height: 589px;
-  margin-left: 10px;
-}
-#right-h2 {
-  float: left;
-  margin-bottom: 29px;
-  margin-right: 256px;
-  margin-left: 0px;
-}
-#right-white-box {
-  height: 500px;
-  width: 470px;
-  background-image: url('https://avatars.mds.yandex.net/get-zen_doc/1131118/pub_5ebedeb8ce25c80f4602253a_5ebee7b84057d47416dcd140/scale_1200');
-  background-repeat: no-repeat;
-  background-size: 100%;
-  float: right;
-}
-#right-white-content {
-  padding-top: 25px;
-padding-right: 42px;
-  padding-left: 40px;
-}
-.right-h3 {
-  font-size: 14px;
-  font-weight: normal;
-  color: #8993ad;
-  padding-left: 4px;
-  margin-bottom: 8px;
-}
-#right-name {
-  width: 362px;
-  border: 1px solid #ebebeb;
-  height: 43px;
-  background-image: url('https://vignette.wikia.nocookie.net/harrypotter/images/2/24/L_sorthat02_hpe6_pr.png/revision/latest?cb=20150326145509&path-prefix=ru');
-  background-color: transparent;
-  background-size: 100% 100%;
-  background-repeat: no-repeat;
-  margin-bottom: 24px;
-  font-size: 17px;
-  padding-left: 13px;
-  padding-right: 13px;
-
-}
-#right-disc {
-  resize: none;
-  width: 362px;
-  height: 196px;
-  border: 1px solid #ebebeb;
-  background-color: transparent;
-  background-size: 100%;
-  margin-bottom: 26px;
-  padding: 16px 13px;
-  font-size: 17px;
+h1 {
   color: white;
-  -ms-overflow-style: none;
+  font-size: 50px;
 }
-
-#right-disc::-webkit-scrollbar {
-   width: 0;
-  }
-textarea:focus, input:focus, button:focus{
-    outline: none;
+input {
+  background-color: transparent;
+  border: 2px solid #00cc66;
+  border-radius: 500px;
+  outline: 0;
+  color: #aaa;
+  width: 60%;
+  height: 40px;
+  font-size: 15px;
+  padding: 15px;
+  transition: 0.3s;
 }
-#right-button {
-  width: 224px;
-  height: 55px;
-  text-align: center;
-  font-size: 16px;
-  border: 0;
-  background-color: #98baed;
-  color: #ffffff;
-
-
+input:hover,input:focus {
+  width: 70%;
+  border-color: #0066cc;
+}
+button:hover,button:focus {
+  background-color: #00cc66;
+}
+button {
+  height: 40px;
+  width: 20%;
+  border: 2px solid #00cc66;
+  background-color: transparent;
+  font-size: 15px;
+  border-radius: 50px;
+  color: white;
+  transition: 0.3s;
 }
