--- a/main.css
+++ b/main.css
@@ -44,6 +44,7 @@ label {
   transition: 0.8s;
   border-radius: 50%;
   position: absolute;
+  transform: translate(-80px);
 }
 input{
   display: none;
